fix mistake in 1NNB SOC result

--- a/two-groups.tex
+++ b/two-groups.tex
@@ -735,9 +735,9 @@ Evaluating the constraint terms:\\
 						\item When $\al$ is large and positive, go straight from 0 NNB to 2 NNB
 					\end{itemize}
 			\end{itemize}
-		\item Can write out SOC (just after equation 33) and FOC, sub together to get
+		\item Can write out SOC and FOC, sub together to get
 			\[
-			  \frac{1}{1 + e^{-X}} \left(e^{-Z} - 1\right) < 0
+			  \frac{1}{1 + e^{-X}} \left(e^{-X} - 1\right) < 0
 			\]
 			Not sure what this means
 	\end{itemize}
