remove stuff I REALLY don't need from presentation

--- a/presentation.tex
+++ b/presentation.tex
@@ -51,10 +51,10 @@
 	\let\Tiny=\tiny
 
 
-\title[Endogenous Politics and the Design of Trade Institutions\hspace{2.05in}\insertframenumber/\inserttotalframenumber]{Endogenous Politics and \\ the Design of Trade Institutions}
+\title[Lobbying and Legislative Uncertainty\hspace{2.95in}\insertframenumber/\inserttotalframenumber]{Lobbying and Legislative Uncertainty}
 %\author[Kristy Buzard]{Kristy Buzard \\ Syracuse University and The Wallis Institute \\ kbuzard@syr.edu}
 \author[Kristy Buzard]{\texorpdfstring{Kristy Buzard\newline Syracuse University and The Wallis Institute  \newline\url{kbuzard@syr.edu}}{Kristy Buzard}}
-\date{April 6, 2016}
+\date{April 16, 2016}
 \begin{document}
 \maketitle
 %\insertpresentationendpage removed b/c of appendix
@@ -148,59 +148,6 @@ Bagwell and Staiger (2002)
 \end{frame} 
 
  
-\begin{frame}{Role of Trade Agreements: TOT Externality}
-\pause
-Grossman and Helpman (1995)
-\pause
-\begin{itemize}[<+->]
-	\item Add endogenous politics
-	\item Now in ``Trade War'': two reasons for positive tariff
-		\begin{itemize}
-			\item TOT externality + pressure from import competing lobby
-		\end{itemize}
-	
-	\item Trade agreement: only internalizes TOT externality
-\end{itemize}
-\end{frame} 
-
- 
-\begin{frame}{Role of Trade Agreements: New Trade Theory}
-\pause
-``New Trade Theory'' externalities
-\pause
-\begin{itemize}[<+->]
-	\item Source: imperfect competition (firm level)
-		\begin{itemize}
-			\item Delocation: Ossa 2011, Bagwell and Staiger 2012
-			\item Profit Shifting: Mrazova 2011, Ossa 2012  
-		\end{itemize}
-	\item Trade agreements
-    \begin{itemize}
-			\item Now take into account impact on foreign welfare
-			\item Internalize these new externalities
-    \end{itemize}
-\end{itemize}
-\end{frame} 
-
-
-\begin{frame}{Role of Trade Agreements: Domestic Commitment}
-\pause
-\begin{itemize}[<+->]
-	\item Maggi and Rodriguez-Clare (1998, 2007)
-		\begin{itemize}
-			\item Allow for (imperfect) capital mobility
-			\item Domestic investment decisions depend on level of protection
-			\item Inability to commit $\Rightarrow$ investment too high b/c importers know protection will respond
-			\item Trade agreements provide commitment device
-    \end{itemize}
-	\item Mitra (2002)
-		\begin{itemize}
-			\item Here distortion is wasted resources in lobby formation
-		\end{itemize}
-\end{itemize}
-\end{frame} 
-
-
 \begin{frame}{Design of Trade Agreements}
 \pause
 \begin{itemize}[<+->]
@@ -378,40 +325,6 @@ Once agreement is set, cooperation enforced by repeated-game punishments conditi
 
 \section{Tariff Caps}
 \subsection{Tariff Caps}
-\begin{comment}
-\begin{frame}{Tariff Caps: Exogenous vs. Endogenous $\ga$}
-\pause
-Strong binding: an exact tariff commitment
-\begin{itemize}
-	\pause
-	\item Must apply the precise tariff level specified in TA
-\end{itemize}
-
-\pause
-\vskip.2in
-Weak binding: a tariff cap
-\begin{itemize}
-\pause
-	\item Must set tariff at or below specified level 
-\end{itemize}
-
-\pause
-\vskip.4in
-Perfect external enforcement vs. self-enforcement (repeated-game)
-
-\end{frame}
-
-
-
-\begin{frame}{Strong Bindings}
-Must set tariff at specified level
-\pause
-\begin{itemize}[<+->]
-	\item $\ga$ exogenous (Bagwell $\&$ Staiger 2005): optimal (rigid) strong binding is the tariff that is politically optimal for the expected realization of $\ga$
-  \item $\ga$ endogenous: if governments have no inherent bias toward protection, the lobbies exert no effort and are afforded no protection 
-\end{itemize}
-\end{frame}
-\end{comment}
 
 {\begin{frame}{Tariff Caps: Exogenous vs. Endogenous $\ga$}
 \pause
@@ -440,69 +353,6 @@ Must set tariff at or below specified level (aka tariff cap)
 
 \end{frame}
 
-
-
-
-\begin{comment}
-\begin{frame}{Highlight: One-Shot Intuition}
-\pause
-\textbf{Legislature}
-\pause
-\begin{itemize}
-	\item Breaks agreement if median legislator prefers $\btn$ to $\bta$
-\end{itemize}
-
-\pause
-\vskip.1in
-\textbf{Lobby}
-\pause
-\begin{itemize}[<+->]
-	\item Given the $\bta$ it faces, lobby knows what $e_b$ is required to break the agreement
- 	\item Lobby pays if $\bm{\pi}(\btn)$ - lobbying costs $> \pi(\bta)$
-\end{itemize}
-
-\pause
-\vskip.13in
-\textbf{Executives}
-\pause
-\begin{itemize}[<+->]
-	\item Set $\bta$ to make paying $e_b$ unprofitable
-		\pause
-		\begin{itemize}
-			\item[$\Rightarrow$] $e_b=0$, agreement remains in force
-		\end{itemize}
-	\item High tariffs, no lobbying, no trade disruptions
-\end{itemize}
-\end{frame}
-\end{comment}
-
-
-\begin{frame}{Repeated Game Intuition}
-\pause
-Legislature: break agreement if punishment not strong enough
-\pause
-\begin{itemize}
-	\item i.e. if one period of gain from cheater's payoff is greater than T-periods of loss from trade-war
-\end{itemize}
-
-\vskip.1in
-\pause
-Lobby: solve for lowest effort ($\ov{e}_b$) that breaks this constraint
-\pause
-\begin{itemize}
-	\item pay $\ov{e}_b$ if it's less than gain from $T$ periods of trade-war profits
-\end{itemize}
-
-\pause
-\vskip.1in
-Executives: set lowest $\bta$ that makes paying $\ov{e}_b$ unprofitable \textit{and} satisfies legislature's condition
-\pause
-\begin{itemize}
-	\item[$\Rightarrow$] $e_b=0$, agreement remains in force
-	\pause
-	\item High tariffs, no lobbying, no trade disruptions
-\end{itemize}
-\end{frame}
 
 
 \section{Escape Clause}
@@ -574,19 +424,6 @@ Now suppose political pressure is a result of both endogenous and exogenous forc
 \end{beamerboxesrounded}
 \end{frame}
 
-\begin{frame}{When the world is more complicated... (2)}
-\begin{itemize}[<+->]
-	\item To make escape clause work, can't use $\ga$
-	\begin{itemize}[<+->]
-		\item Need signal of shock that is not influenced by endogenous pressure
-	\end{itemize}
-	\item Can condition directly on $s$
-		\begin{itemize}
-			\item This seems to be what the WTO actually \textit{does}
-		\end{itemize}
-\end{itemize}
-
-\end{frame}
 
 
 \begin{frame}{An Escape Clause for Endogenous Politics}
@@ -625,21 +462,6 @@ May explain why escape clause has fallen out of use
 
 \section{Conclusion}
 
-\begin{comment}
-\begin{frame}{Ex-Ante Lobbying}
-Without ex-ante: gov't anticipates ex-post lobbying, chooses $\tau^{\text{TA}}$ that maximizes objective function given $e^{\text{EP}}$
-  \[
-	  \max_\tau W(\ga(e^{\text{EP}}),\tau) + W^*(\tau)
-	\]
-\pause
-When ex-ante lobbying ($e^{\text{EA}}$) is possible, we could have
-\pause
-  \[
-	  \max_\tau W(\ga(e^{\text{EA}}),\tau) + W^*(\tau)
-	\]
-	but the lobby would now have to pay \textit{twice}.
-\end{frame}
-\end{comment}
 
 \begin{frame}{Future Work}
 \pause
