--- a/presentation.tex
+++ b/presentation.tex
@@ -248,6 +248,13 @@ When :
 	\item I
 	\item C
 \end{itemize}
+
+\pause
+\vskip.2in
+\begin{beamerboxesrounded}[upper=palette tertiary, shadow=true]{Result...}
+    When Vote Buyer $B$ pays bribes to exactly two legislators, the bribes are such that the two bribed legislators' ideal points gross of bribes are equalized. Which two legislators are bribed depends on the bias parameter $\al$.
+\end{beamerboxesrounded}
+
 \end{frame}
 
 
@@ -262,10 +269,51 @@ Now
 \pause
 \vskip.2in
 \begin{beamerboxesrounded}[upper=palette tertiary, shadow=true]{Result...}
-  Assume ...
+    When Vote Buyer $B$ pays bribes to all three legislators, the bribes are such that the legislators' ideal points gross of bribes are equalized.
 \end{beamerboxesrounded}
 \end{frame}
 
+\begin{frame}
+\begin{beamerboxesrounded}[upper=palette tertiary, shadow=true]{Result...}
+      When Vote Buyer $B$ pays bribes to exactly one legislator, it may be any one of the three legislators depending on the bias parameter $\al$.
+\end{beamerboxesrounded}
+
+\pause
+\vskip.2in
+\begin{beamerboxesrounded}[upper=palette tertiary, shadow=true]{Result...}
+  When Vote Buyer $B$ has a low willingness to pay, he does not bribe any legislator.
+\end{beamerboxesrounded}
+
+\end{frame}
+
+
+\begin{frame}{Varying Uncertainty Across Legislators}
+Now 
+\pause
+\begin{itemize}[<+->]
+	\item Want 
+	\item But 
+\end{itemize}
+
+\pause
+\vskip.2in
+\begin{beamerboxesrounded}[upper=palette tertiary, shadow=true]{Conjecture}
+ When there is no bias in the positions of the legislators ($\al =0$), the bribes of legislators whose ideal points are at the median in terms of uncertainty receive the highest relative bribes.\end{beamerboxesrounded}
+\end{frame}
+
+\subsection{Two Vote Buyers}
+\begin{frame}
+\begin{beamerboxesrounded}[upper=palette tertiary, shadow=true]{Result...}
+  It is possible that neither vote buyer bribes any legislator on a given vote. This occurs when both vote buyers' willingness-to-pay parameters are small.
+\end{beamerboxesrounded}
+
+\pause
+\vskip.2in
+\begin{beamerboxesrounded}[upper=palette tertiary, shadow=true]{Result...}
+  It is possible for both vote buyers to bribe legislators on the same vote.
+\end{beamerboxesrounded}
+
+\end{frame}
 
 
 
