--- a/presentation.tex
+++ b/presentation.tex
@@ -99,6 +99,15 @@
 
 \end{frame}
 
+\begin{frame}
+\includegraphics[height=2.75in, width=4.25in]{graph2.jpg}
+\end{frame}
+
+
+\begin{frame}
+\includegraphics[height=2.75in, width=4.25in]{graph1.jpg}
+\end{frame}
+
 
 \begin{frame}{Preview}
 \frametitle{P}
