more adjustments for Midwest talk

--- a/presentation.tex
+++ b/presentation.tex
@@ -84,6 +84,17 @@
 
 \end{frame}
 
+\begin{frame}{Literature}
+\pause
+\begin{itemize}[<+->]
+	\item \textbf{Probabilistic Voting with Policy Motivation}: Roemer 1994, 1997, Duggan $\&$ Fey 2011
+	\item \textbf{Lobbying with Uncertainty}: Coates $\&$ Ludema 2001, Le Breton $\&$ Salanie 2003, Le Breton $\&$ Zaphorozhets (2007)
+	\item \textbf{Vote Buying in Legislatures}: Groseclose $\&$ Snyder 1996, Banks 2000, Dal Bo 2007
+	%\item \textbf{Uncertainty}: 
+\end{itemize}
+\end{frame} 
+
+
 
 \begin{frame}{Some Stylized Facts}
 
@@ -99,17 +110,6 @@
 \vskip.2in
 Adding uncertainty to standard model captures (2) --- (4)
 \end{frame}
-
-\begin{frame}{Literature}
-\pause
-\begin{itemize}[<+->]
-	\item \textbf{Probabilistic Voting with Policy Motivation}: Roemer 1994, 1997, Duggan $\&$ Fey 2011
-	\item \textbf{Lobbying with Uncertainty}: Coates $\&$ Ludema 2001, Le Breton $\&$ Salanie 2003, Le Breton $\&$ Zaphorozhets (2007)
-	\item \textbf{Vote Buying in Legislatures}: Groseclose $\&$ Snyder 1996, Banks 2000, Dal Bo 2007
-	%\item \textbf{Uncertainty}: 
-\end{itemize}
-\end{frame} 
-
 
 
 %\begin{frame}
@@ -224,7 +224,7 @@ Assume vote buyers maximize expected value of winning net of bribes paid
 \begin{itemize}[<+->]
 	\item Assume bribes must be non-negative
 	\item Vote buyer won't spend more than his willingness to pay, $W_B$
-	\item In three-seat legislature, max probability that $\geq 2$ legislators vote for $s$
+	\item In three-seat legislature, max probability that $\geq 2$ legislators vote for $s \times W_B -$ bribes
 \end{itemize}
 \end{frame}
 
